# bayesian-neural-network

./: 01_ols.ipynb  README.md  pyproject.toml
notebook/: 01_ols.ipynb  02_gradient.ipynb  03_stochastic_nn.ipynb  04_bayesian.ipynb
