[tool.poetry]
name = "bayesian_neural_network"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.0"
jupyter = "^1.0.0"
scikit-learn = "^0.24.0"
numpy = "^1.19.4"
tensorflow-probability = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
